[tool.poetry]
name = "sample app"
version = "0.1.0"
description = ""
authors = ["MOHAMMED SAFWAN A <mohammedsafwan448@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.37.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
